--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,9 +1,88 @@
 /*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
-*/
-/* 
     Created on : 31 ene. 2022, 18:15:02
     Author     : LeoSolis
+CSS LOGIN Page
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Quintessential&display=swap');
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Cairo', sans-serif;    
+}
+
+body{
+    margin:0;
+    padding:0;
+    background:linear-gradient(120deg,#38be2c,#efaf1a);
+    height: 100vh;
+    overflow: hidden;
+}
+
+.content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.5);
+    transform: translate(-50%,-50%);
+}
+
+.content h1{
+    text-align: center;
+    padding: 20px 0px;
+    border-bottom: 1px solid chocolate;
+}
+
+.content form{
+    padding: 0px 40px;
+    box-sizing: border-box;
+}
+
+form .txt_field{
+    position: relative; 
+    border-bottom: 2px solid chocolate;
+    margin: 30px 0px;
+}
+
+.txt_field input{
+    width:100%;
+    padding: 0px 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.txt_field label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #efaf1a;
+    transform: translateY(-200%);
+    font-size: 16px;
+    pointer-event: none;   
+}
+
+.txt_field label:hover{
+    letter-spacing: 5px;
+}
+
+a{
+    display: inline-block;
+    font-size: 1em;
+    background: #2184F5;
+    padding: 10px 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+a:hover{
+    background: #1af131;
+    letter-spacing: 2px;
+}
