--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -1,9 +1,9 @@
-
 <!--
 Leonel Solis
 Personas
 S04
 -->
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
@@ -14,11 +14,33 @@ S04
     <body>
         <h1 th:text="${titulo}"></h1>
         <table>
-            <th:block th:each="user : ${personas}">
+            <thead class=""thead-dark>
                 <tr>
-                    <td th:text="${user.getEmail}"></td>
-                </tr>
-            </th:block>
+                    <th scope="col">Nombre </th>
+                    <th scope="col">Apellido 1 </th>
+                    <th scope="col">Apellido 2 </th>
+                    <th scope="col">Email </th>
+                    <th scope="col">Telefono </th>
+                    <th scope="col">Pais </th>
+                    <th scope="col">Eliminar </th>
+                </tr>                
+            </thead>
+            
+            <tbody>
+                <th:block th:each="user : ${personas}">
+                    <tr>
+                        <td th:text="${user.getNombre}"></td>
+                        <td th:text="${user.getApellido1}"></td>
+                        <td th:text="${user.getApellido2}"></td>
+                        <td th:text="${user.getEmail}"></td>
+                        <td th:text="${user.getTelefono}"></td>      
+                        <td th:text="${user.getPais}"></td> 
+                        <td>
+                            <a th:href="@{/delete/{id} (id=${user.getId})}">Delete</a>
+                        </td>
+                    </tr>
+                </th:block>
+            </tbody>            
         </table>
     </body>
 </html>
