--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@ HTML Login para proyecto Tienda
                 </div>
                 <input type ="submit" value ="Login">
                 <div class ="signup_link">
-                    Not a member? <a href =""> Sign Up </a>
+                    Not a member? <a href ="home.html"> Sign Up </a>
                 </div>
             
             </form>
