Configuracion S09 Configuracion para cambio de idioma de palabras específicas, modificacion de pom.xml

--- a/src/main/resources/templates/crear.html
+++ b/src/main/resources/templates/crear.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--
-
+HTML Crear persona para Proyecto tienda
 -->
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:replace="plantilla/template::head"> <!-- comment -->        
     </head>
     <title>Nueva persona</title>
     <body>
-    <header th:replace="plantilla/template.html::header"></header> <!-- comment-->
+    <header th:replace="plantilla/template::header"></header> <!-- comment-->
         
         <!-- Esto es un formulario-->
         <div class = "container">
