--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -1,85 +1,59 @@
 <!--
 Template del proyecto tienda
-Leonel Solis
-I Q 2022
+Enviado por el profe via teams
+Clase S11
 
-into the html tag xmlns="http://www.w3.org/1999/xhtml" 
 -->
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head th:fragment="head">        
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:fragment="head">
+        <title>Mi Tienda</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     </head>
-
     <body>
+        <!-- NAV BAR -->
+        <header th:fragment="header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Boot Security</a>
 
-        <!-- Nav Bar   -->       
-        <header th:fragment="header">                               
-            <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="home.html">Home</a>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerContent"
-                            aria-controls="navbarTogglerContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarTogglerContent" style>
-                        <div class="navbar-nav">
-                            <a class="nav-link" href="login.html">Login</a>
-                            <a class="nav-link" href="index.html">Index</a>
-                            <a class="nav-link" href="videos.html">Videos</a>
-                            <a class="nav-link" href="templates/crear.html">PersonasN</a>
-                            <a class="nav-link" href="templates/personas.html">Lista de personas</a>
-                        </div>
-                    </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/index}"><i class="fa fa-home"></i>Home</a>
+                        </li>
+                        <li sec:authorize="isAuthenticated()" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/profile/index}">Profile</a>
+                        </li>
+                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/admin/index}">Admin</a>
+                        </li>
+                        <li sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/management/index}">Management</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
+                        <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
+                        <button sec:authorize="isAnonymous()" th:href="@{~/login}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Login</button>
+                    </form>
                 </div>
             </nav>
-            <br>            
         </header>
 
+        <!-- CONTENIDO -->
 
-        <!-- Contenido -->        
         <div class="container"></div>
 
-        <!-- Form -->
-        <form th:fragment="form_crear" class="row gy-2 gx-3 align-items-center">
-            <div class="col-auto">
-                <label class="visually-hidden" for="nombre">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+        <!-- FOOTER -->
+        <footer th:fragment="footer" class="bg-dark text-white fixed-bottom">
+            <div>
+                <p>Copyright Tienda &copy; 2022</p>
             </div>
-
-            <div class="col-auto">
-                <label class="visually-hidden" for="autoSizingInput">Name</label>
-                <input type="text" class="form-control" id="autoSizingInput" placeholder="Jane Doe">
-            </div>
-
-            <div class="col-auto">
-                <label class="visually-hidden" for="autoSizingSelect">Preference</label>
-                <select class="form-select" id="autoSizingSelect">
-                    <option selected>Choose...</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
-
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>
-
-        <!-- Footer -->
-        <footer th:fragment="footer" class="text-center text-white fixed-bottom" style="background-color: #0a4275;">
-                <p>Leonel Solis &COPY [[#{plantilla.derechos}]]
-                    <a th:ref="@{/(lang=es)}">ES</a>
-                    <a th:ref="@{/(lang=en)}">EN</a>
-                </p>       
         </footer>
-
     </body>
 </html>
+
