Tarea 4 Arreglo de los botones en el log in para obtener los reportes jasper en html o en pdf.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,10 +24,10 @@ HTML Login para proyecto Tienda
                 <input type ="submit" value ="Login">
                 <br>
                  <br>
-                <a href = "reporte/{html}">Reporte Jasper en HTML </a>
+                <a th:href = "@{/reporte/{format} (format = html)}">Reporte Jasper en HTML </a>
                 <br>
                  <br>
-                 <a href = "reporte/{pdf}">Reporte Jasper en PDF </a>
+                 <a th:href = "@{/reporte/{format} (format = pdf)}">Reporte Jasper en PDF </a>
                  <br>
                   <br>
                 <div class ="signup_link">
